# TotalPear

./: .gitignore  README.md  hi.py  lexer.py  main.py  pyproject.toml  requirements.txt  test.il  test.py  test.tp
Dev/: semantic.md
Lexer/: lexer.py  lexer_consts.py  lexer_print.py  lexer_stream.py  test.tp
Reverse_PN/: reverse.py  reverse_print.py  reverse_semantic_consts.py  reverse_stream.py  reverse_syntax_consts.py  reverse_table.py  reverse_var_table.py  todo.md
Stack_machine/: CMakeLists.txt  executor.cpp  executor.h  main.cpp  reader.cpp  reader.h  stack.cpp  stack.h  test.postfix
Stack_machine/data/: test.postfix
Stack_machine/libs/json/share/cmake/nlohmann_json/: nlohmann_jsonTargets.cmake
Stack_machine/libs/json/share/pkgconfig/: nlohmann_json.pc
Stack_machine/reader_lib/: CMakeLists.txt  reader.cpp  reader.h
Stack_machine/reader_lib/libs/json/share/cmake/nlohmann_json/: nlohmann_jsonConfig.cmake
Syntax/: syntax.py  syntax_consts.py  syntax_print.py  syntax_stream.py
Syntax_Semant/: exp.md  semantic.py  semantic_consts.py  semantic_print.py  semantic_stream.py  semantic_syntax_consts.py  semantic_syntax_print.py  semantic_syntax_semant.py  semantic_syntax_stream.py  semantic_syntax_var_table.py  syntax_consts.py  syntax_print.py  syntax_semant.py  syntax_stream.py  todo.md
data/: test.tp
src/Antlr/: consts.py  dijkstra_algo.py  tables.py  utils.py
src/Lexer/: lexer.py  lexer_consts.py  lexer_stream.py  lexer_tables.py
src/Syntaxer/: reverse.py  reverse_print.py  reverse_semantic_consts.py  reverse_stream.py  reverse_table.py
src/Utils/: test.il
test/: Logic.tp
(+21 files in other folders)
